--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@mdi/font": "^7.2.96",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vuetify": "^3.3.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
@@ -28,12 +31,14 @@
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
     "cypress": "^12.14.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.43.0",
     "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-vue": "^9.11.0",
+    "eslint-plugin-vue": "^9.14.1",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
     "start-server-and-test": "^2.0.0",
+    "stylelint": "^15.7.0",
+    "stylelint-config-standard": "^33.0.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
     "vitest": "^0.32.0",
