--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "firebase": "^9.23.0",
     "sass": "^1.63.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
@@ -35,6 +36,7 @@
     "eslint": "^8.43.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-vue": "^9.14.1",
+    "firebase-tools": "^12.4.0",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
     "start-server-and-test": "^2.0.0",
