--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
     "eslint-plugin-vue": "^9.14.1",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss-html": "^1.5.0",
     "start-server-and-test": "^2.0.0",
     "stylelint": "^15.7.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^11.0.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
     "vitest": "^0.32.0",
